--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+NEW in 2.1.3 - 2018-08-30
+=========================
+
+  * Fix resource refcounting issues in database. Reset is advised.
+  * Drop cardinality from nie:copyright, nie:license, nie:legal and dc:rights
+  * Fix superfluous ontology checks on second tracker-store run
+  * Use more SPARQL1.1 correct syntax.
+  * Allow use of domain rules outside prefix
+  * Compatibility fixes with C++
+
+Translations: gl, id, ko
+
 NEW in 2.1.2 - 2018-08-15
 =========================
 
