[update to 2.1.4] libtracker-data: Fix build with format-security flag
Ask Hjorth Larsen (1):
      Updated Danish translation

Carlos Garnacho (1):
      Relese 2.1.4

Rūdolfs Mazurs (1):
      Update Latvian translation

Sam Thursfield (1):
      Merge branch '34-build-failure-with-werror-format-security'

Tim Lunn (1):
      libtracker-data: Fix build with format-security flag

gogo (1):
      Update Croatian translation

NEW in 2.1.4 - 2018-09-04
=========================

  * Fix build with format-security flag

Translations: da, hr, lv

	Relese 2.1.4

2018-09-03  Sam Thursfield  <sam@afuera.me.uk>

	Merge branch '34-build-failure-with-werror-format-security'
	See https://gitlab.gnome.org/GNOME/tracker/merge_requests/20

2018-09-03  Tim Lunn  <tim@feathertop.org>

	libtracker-data: Fix build with format-security flag
	Closes:https://gitlab.gnome.org/GNOME/tracker/issues/34

2018-09-02  gogo  <trebelnik2@gmail.com>

	Update Croatian translation

(NEWS truncated at 15 lines)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,29 @@
+2018-09-04  Carlos Garnacho  <carlosg@gnome.org>
+
+	Relese 2.1.4
+
+2018-09-03  Sam Thursfield  <sam@afuera.me.uk>
+
+	Merge branch '34-build-failure-with-werror-format-security'
+	See https://gitlab.gnome.org/GNOME/tracker/merge_requests/20
+
+2018-09-03  Tim Lunn  <tim@feathertop.org>
+
+	libtracker-data: Fix build with format-security flag
+	Closes:https://gitlab.gnome.org/GNOME/tracker/issues/34
+
+2018-09-02  gogo  <trebelnik2@gmail.com>
+
+	Update Croatian translation
+
+2018-09-01  Ask Hjorth Larsen  <asklarsen@gmail.com>
+
+	Updated Danish translation
+
+2018-08-31  Rūdolfs Mazurs  <rudolfs.mazurs@gmail.com>
+
+	Update Latvian translation
+
 2018-08-30  Carlos Garnacho  <carlosg@gnome.org>
 
 	Release 2.1.3
