--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+NEW in 2.1.4 - 2018-09-04
+=========================
+
+  * Fix build with format-security flag
+
+Translations: da, hr, lv
+
 NEW in 2.1.3 - 2018-08-30
 =========================
 
