--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+NEW in 2.1.5 - 2018-09-26
+=========================
+
+  * Plug several leaks
+  * Fix possible crashes on tracker-store exit
+  * Several fixes to meson build
+
+Translations: ru
+
 NEW in 2.1.4 - 2018-09-04
 =========================
 
